// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppointmentModal AppointmentModal should render a header correctly 1`] = `
<header
  className="modal-card-head"
>
  <div
    className="undefined modal-card-title"
  >
    <Component>
      Some address
    </Component>
    <SubTitleH5>
      Some type
    </SubTitleH5>
  </div>
  <button
    aria-label="close"
    className="delete"
    data-test="modal-close-button"
    onClick={[Function]}
  />
</header>
`;

exports[`AppointmentModal AppointmentModal should render correctly 1`] = `
<Modal
  HeaderComponent={[Function]}
  afterClose={[MockFunction]}
  visible={true}
>
  <div>
    <div>
      <FaClock />
      <H6>
        Time:
      </H6>
    </div>
    <p>
      18 Dec 2016 04:30 PM - 05:30 PM
    </p>
  </div>
  <div>
    <div>
      <FaHome />
      <H6>
        Property:
      </H6>
    </div>
    <AcLink
      dynamicLinkParams={
        Object {
          "appMode": "DESKTOP",
          "entityCode": undefined,
          "entityType": "properties",
        }
      }
    >
      <p>
        65, Lindsey Close, Great Denham, Bedford, Bedfordshire, MK40 4GT
      </p>
    </AcLink>
  </div>
  <div>
    <div>
      <FaStickyNote />
      <H6>
        Entry Notes:
      </H6>
    </div>
    <p>
      hello world
    </p>
  </div>
  <div>
    <div>
      <FaHandshake />
      <H6>
        Arrangements:
      </H6>
    </div>
    <p>
      Switch lights on in living room
    </p>
  </div>
</Modal>
`;

exports[`AppointmentModal AppointmentModal should render correctly when loading 1`] = `
<Modal
  HeaderComponent={[Function]}
  afterClose={[MockFunction]}
  visible={true}
>
  <Loader />
</Modal>
`;

exports[`AppointmentModal renderAddress should matchSnapshot 1`] = `
<div>
  <div>
    <div>
      <FaHome />
      <H6>
        Property:
      </H6>
    </div>
    <AcLink
      dynamicLinkParams={
        Object {
          "appMode": "DESKTOP",
          "entityCode": "SOME_ID",
          "entityType": "properties",
        }
      }
    >
      <p>
        65, Lindsey Close, Great Denham, Bedford, Bedfordshire, MK40 4GT
      </p>
    </AcLink>
  </div>
</div>
`;

exports[`AppointmentModal renderCheckMark should match snapshot 1`] = `
<div>
  <TiTick />
</div>
`;

exports[`AppointmentModal renderCommunicationDetail should match snapshot 1`] = `
<div>
  <IconList
    items={
      Array [
        Object {
          "icon": <TiMail
            className="icon-list-icon"
          />,
          "text": <a
            href="mailto:chase.maclean@reapitestates.net"
          >
            chase.maclean@reapitestates.net
          </a>,
        },
      ]
    }
  />
</div>
`;

exports[`AppointmentModal renderCommunicationType should match snapshot 1`] = `
<div>
  <TiMail
    className="icon-list-icon"
  />
</div>
`;
